<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMART</string>
    <string name="action_settings">Settings</string>
    <string name="smart">SMART</string>
    <string name="smart_abbr">Secure Maternity Appointment Recording Tracker</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="buttonLogin">Login</string>
    <string name="textView_Footer">&#169;National Maternity Hospital, Ireland</string>
    <string name="textView_About">About</string>
    <string name="viewappointments">View Appointments</string>
    <string name="selectcalendar">Please select an appointment calendar.</string>
    <string name="clinics">CLINICS</string>
    <string name="visits">VISITS</string>
    <string name="buttons">BUTTONS</string>
    <string name="btn_previous">&lt; Prev</string>
    <string name="btn_next">Next &gt;</string>
    <string name="ph_clinic_name">Placeholder Clinic Name</string>
    <string name="ph_date">Placeholder Date</string>
    <string name="ph_sched_appointments">Placeholder Scheduled Appointments</string>
    <string name="ph_time">12.00</string>
    <string name="ph_client_name">Nina Simone</string>
    <string name="ph_gestation">24+3</string>
    <string name="ibtn_i">i</string>
    <string name="textViewSettings">SETTING</string>
    <string name="textViewLook">LOOK</string>
    <string name="textViewLogout">LOGOUT</string>
    <string name="textViewHome">HOME</string>
    <string name="textViewSync">SYNC</string>
    <string name="textViewProvider">PROVIDER</string>
    <string name="textViewUser">USER</string>
    <string name="textViewBook">BOOK</string>
    <string name="select_service_option">Select Service Option</string>
    <string name="title_activity_clinics">ClinicsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_smart_service_user">SmartServiceUserActivity</string>
    <string name="buttonBack">Back</string>
    <string name="buttonCall">Call</string>
    <string name="buttonEdit">Edit</string>
    <string name="textViewAnteNatal">Ante-Natal</string>
    <string name="textViewPersonal">Personal</string>
    <string name="textViewPostNatal">Post-Natal</string>
    <string name="hospitalNumber">Hospital Number</string>
    <string name="email">Email</string>
    <string name="mobilePhone">Mobile Phone</string>
    <string name="homePhone">Home Phone</string>
    <string name="contact">Contact</string>
    <string name="userName">Username</string>
    <string name="serviceUserName">Username</string>
    <string name="housePhone">Home Phone</string>
    <string name="address">Address</string>
    <string name="homeType">Home Type</string>
    <string name="serviceUserAddress">Address</string>
    <string name="homePostCode">Home Post Code</string>
    <string name="homeCounty">Home County</string>
    <string name="nextOfKin">Next Of Kin</string>
    <string name="nextOfKinPhone">Phone</string>
    <string name="nextOfKinName">Name</string>
    <string name="directions">Direction</string>
    

</resources>