<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/smart_main_border"
    tools:context="com.devstream_team1.activities.SmartMainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0.5dp"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/smart_app_logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:paddingTop="20dp"
            android:src="@drawable/smart_app_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/smart"
            android:textSize="20sp" />

        <TextView
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/smart_abbr"
            android:textColor="#3c6bd3"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/textfield"
            android:ems="10"
            android:hint="@string/usernameHint"
            android:textStyle="italic" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/textfield"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:textStyle="italic" >
        </EditText>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_login"
            android:text="@string/buttonLogin" />

        <TextView
            android:id="@+id/textViewFooter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/textView_Footer" />

        <TextView
            android:id="@+id/textViewAbout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#3c6bd3"  
            android:textStyle="bold"          
            android:text="@string/textView_About" />

    </LinearLayout>

</LinearLayout>