<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@+id/lv_listOfProviders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:visibility="visible" >
    </ListView>

    <LinearLayout
        android:id="@+id/layout_userPovider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textViewProvidersName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:hint="My Name"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:text="Username"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:hint="Username"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:text="Email"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:hint="Email"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textViewPrimaryPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:text="Primary Phone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/_primaryPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:hint="Primary Phone"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textViewSecondaryPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:text="Secondary Phone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/_secondaryPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:hint="Secondary Phone"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textViewAdminAccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:text="Admin Access"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/_adminAccess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:hint="true/false"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textViewActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:text="Active"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/_active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:hint="true/false"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textViewOccupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:text="Job Occupation"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:hint="occupation"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textViewJobLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:text="Job Level"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/_jobLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1.0"
                android:hint="job level"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" 
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <Button
                android:id="@+id/buttonBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="#D1E0FF"
                android:layout_marginRight="10dp"
                android:text="@string/buttonBack" 
                android:onClick="back"/>

            <Button
                android:id="@+id/buttonCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="#D1E0FF"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/buttonCall" 
                android:onClick="call"/>
            
            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1.0"
                android:background="#D1E0FF"
                android:text="@string/buttonEdit" 
                android:onClick="editData"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>